# ironauth

./: .gitignore  README.md  alembic.ini  main.py  mkdocs.yml  pyproject.toml
docs/: api-references.md  configuration.md  getting-started.md  index.md
docs/guides/: oauth.md  two-factor.md
ironauth/: __init__.py
ironauth/adapters/database/: sqlalchemy.py
ironauth/adapters/frameworks/: fastapi.py
ironauth/core/: auth.py  config.py  csrf.py  email_manager.py  password.py  session.py  token_blacklist.py
ironauth/models/: user.py
ironauth/plugins/: __init__.py  oauth.py  rate_limit.py  two_factor.py
ironauth/plugins/email/: __init__.py  base.py  resend.py  smtp.py  templates.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/: conftest.py  test_database.py  test_integration.py  test_password.py  test_plugins_flows.py  test_routes.py  test_security_fixes.py  test_session.py
