[project]
name = "ironauth"
version = "0.2.0"
description = "Framework-agnostic authentication library for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "sileyekounou-1", email = "kounousileye@gmail.com" }
]
keywords = ["authentication", "auth", "fastapi", "jwt", "oauth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.49",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mkdocs-material>=9.7.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/sileyekounou-1/ironauth"
Repository = "https://github.com/sileyekounou-1/ironauth"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ironauth"]
